name:                m6809
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/httpClient#readme
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CharSet
                     , Format
                     , M6809
                     , Memory
                     , Opcodes
                     , Options
                     , VM
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , base16-bytestring
                     , bytestring
                     , data-default
                     , hflags
                     , stm
                     , vector
                     , word8
  default-language:    Haskell2010

executable m6809
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , base16-bytestring
                     , bytestring
                     , hflags
                     , m6809
                     , vector
                     , word8
  default-language:    Haskell2010

test-suite httpClient-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , httpClient
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/httpClient
